--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "esbuild-rails": "^1.0.3",
     "local-time": "^2.1.0",
     "sass": "^1.56.1",
+    "stimulus": "^3.1.1",
     "trix": "^2.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
