--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.0",
     "esbuild-rails": "^1.0.3",
+    "jquery": "^3.6.1",
     "local-time": "^2.1.0",
+    "rails-erb-loader": "^5.5.2",
     "sass": "^1.56.1",
     "stimulus": "^3.1.1",
     "trix": "^2.0.0",
